--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,10 @@
       crossorigin="anonymous"
     />
     <title>React App</title>
+    <script
+      src="https://upload-widget.cloudinary.com/global/all.js"
+      type="text/javascript"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
